--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   ],
   "license": "MIT",
   "author": "Erick Eduardo Petrucelli <erick.petrucelli@fatectq.edu.br>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ErickPetru/vue-feathers-chat.git"
+  },
   "engines": {
-    "node": ">= 0.12.0"
+    "node": ">= 6.0.0"
   },
   "scripts": {
+    "start": "node src/",
     "test": "npm run jshint && npm run mocha",
     "jshint": "jshint src/. test/. --config",
-    "start": "node src/",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
